--- a/style.css
+++ b/style.css
@@ -1,45 +1,74 @@
-*{
-    box-sizing: border-box;
-    list-style-type: none;
+body{
     margin: 0;
-    padding: 0;
-    text-decoration: none;
-    z-index: 1;
 }
-
 .headercontainer{
     align-items: center;
     display: flex;
     justify-content: space-between;
-    max-width: 1415px;
     padding: 0 15px;
-    width: 100%;
+    background-color: black;
+    color: white;
+    height: 10vh;
+    padding: 6px;
+}
+a {
+    text-decoration: none;color: white;margin: 0 10px
+}
+.logo, img{
+    height: 100%;
 }
 .menuheader{
     align-items: center;
     display: flex;
+    margin: 15px;
+    margin: 10px;
 }
-
 .menuitems{
     align-items: center;
     display: flex;
     justify-content: flex-start;
-    width: 100%;
+    padding: 10px;
 }
-.firstScreen{
-    align-items: center;
+.container{
+    background-color: brown;
+    display: flex;
+    min-height: 100vh;
+    position: relative;
+    
+}
+.firstContainer{
+    width: 100%;
+    display: flex;
+}
+.leftContainer, .rightContainer{
+    width: 50%;
     display: flex;
     justify-content: center;
+    align-items: center;
+
+}
+.secondContainer{
+    width: 100%;
+    display: flex;
+}
+.container2{
+    background-color: burlywood;
+    display: flex;
     min-height: 100vh;
-    overflow: hidden;
     position: relative;
-    width: 100%;
 }
-.firstScreenSlider{
-    width: 100%;
+.leftContainer2, .rightContainer2{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.slick-list{
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
+.row, .h2, .ul{
+    background-color: black;
+    display: flex;
+    color: white;
+    justify-content: space-around;
+    text-align: center;
 }
+ul{padding: 0;}
+li{list-style: none; text-align: center; margin: 10px;}
